# CodeWay

./: .gitignore  To-do.txt  UML.mdj  index.rst
.github/workflows/: main.yml
api-test/: bruno.json  login.bru  register.bru
backend/: .gitignore  RAG.py  demo.env  main.py  main_fake.py  main_lc.py  pyproject.toml  rag.py  ragpy  test.py  test_jax_doc_query.py
backend/Agent/: Action.py  ReAct.py
backend/Models/: Factory.py
backend/Tools/: FileQATool.py  GitHubTool.py  GithubDocumentQueryTool.py  PythonTool.py  Tools.py  __init__.py
backend/Utils/: LangfuseMonitor.py
backend/gotrue-2.12.0/: PKG-INFO  pyproject.toml
backend/gotrue-2.12.0/gotrue/_sync/: gotrue_base_api.py
backend/prompts/main/: main.txt
backend/src/: agent.py  github_reader.py  rag.py
backend/tmp/lancedb/recipes.lance/_transactions/: 0-774a2bc0-8cca-4d6b-aa24-50b85cce9805.txn  1-4987b7ab-7fff-491a-9b71-3eee23150cca.txn
backend/tmp/lancedb/recipes.lance/data/: 559e0719-6c75-4a6d-98cc-a2810b9bb77a.lance
docs/: conf.py  index.md  pyproject.toml  run.sh  run_doc.sh
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
frontend/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  style.css
frontend/src-tauri/: tauri.conf.json
frontend/src/routes/: __root.tsx  auth.tsx  index.tsx
frontend/src/utils/: chatgpt.ts
(+1 files in other folders)
