[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "granian>=2.2.0",
    "supabase>=2.3.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "email-validator>=2.1.1",
    "gotrue",
]

[tool.uv.sources]
gotrue = { path = "gotrue-2.12.0" }
